--- a/scss/_flex.scss
+++ b/scss/_flex.scss
@@ -1,10 +1,12 @@
+$orange: #f33f3f;
+
 @mixin flexed {
   display: flex;
   gap: 0.1rem;
   height: 3rem;
 
   &:hover {
-    background-color: rgba(5, 5, 5, 0.5);
+    background-color: $orange;
     border-radius: 0.5rem;
   }
   .icon {
